--- a/index.html
+++ b/index.html
@@ -5,11 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XMAS Coin - The Official Coin of Christmas</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+            color: #343a40;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            text-align: center;
+            background-color: #ffcc00;
+            padding: 20px;
+            position: relative;
+        }
+
+        h1 {
+            font-size: 2.5em;
+        }
+
+        h2 {
+            font-size: 1.5em;
+            margin-bottom: 20px;
+        }
+
+        .hero-image {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+
+        .story, .tales {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+
+        .story p, .tales p {
+            line-height: 1.6;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #007bff;
+            color: white;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+
+        .social-icons img {
+            width: 30px;
+            margin: 0 10px;
+        }
+    </style>
 </head>
 <body>
     <header>
         <h1>🎅🎄 $XMAS 🎄❄️</h1>
         <h2>The Official Coin of Christmas!</h2>
+        <img src="https://example.com/your-hero-image.jpg" alt="XMAS Coin" class="hero-image"> <!-- Replace with your image URL -->
         <p>Get ready for a festive crypto experience! 🎁✨</p>
     </header>
     
@@ -27,6 +87,17 @@
     <footer>
         <h4>Follow Us</h4>
         <p>Stay updated on all things XMAS and schedule your posts to spread the holiday cheer!</p>
+        <div class="social-icons">
+            <a href="https://twitter.com/yourprofile" target="_blank">
+                <img src="https://example.com/twitter-icon.png" alt="Twitter"> <!-- Replace with your image URL -->
+            </a>
+            <a href="https://facebook.com/yourprofile" target="_blank">
+                <img src="https://example.com/facebook-icon.png" alt="Facebook"> <!-- Replace with your image URL -->
+            </a>
+            <a href="https://instagram.com/yourprofile" target="_blank">
+                <img src="https://example.com/instagram-icon.png" alt="Instagram"> <!-- Replace with your image URL -->
+            </a>
+        </div>
     </footer>
 
     <script src="script.js"></script>
